--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="ISO-8859-1"/>
 <title>Project Name Here</title>
 </head>
 <body>
