Improved UI and added parameters to fragments

--- a/src/main/resources/templates/fragments/signUpForm.html
+++ b/src/main/resources/templates/fragments/signUpForm.html
@@ -1,9 +1,15 @@
 <div th:fragment="signUpForm">
-	<form class="form-inline align-items-center" action="#" th:action="@{/signUpForm}" method="GET">
-		<input class="form-control mr-sm-2" type="email" placeholder="Email" aria-label="Email" name="email">
-		<input class="form-control mr-sm-2" type="text" placeholder="Name" aria-label="Name" name="name">
-		<input class="form-control mr-sm-2" type="password" placeholder="Password" aria-label="Password" name="password">
-		<button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Sign Up</button>
-	</form>
+	<form class="form-signin border-left pl-4" style="width: 350px;" action="#" th:action="@{/signUpForm}" method="GET">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Name" name="name" required>
+      </div>
+      <div class="form-group">
+        <input type="email" class="form-control" placeholder="Email address" name="email" required>
+      </div>
+      <div class="form-group">
+        <input type="password" class="form-control" placeholder="Password" name="password" required>
+      </div>
+      <button class="btn btn-dark btn-block" type="submit">Sign up</button>
+    </form>
 </div>
 	
