--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -2,19 +2,14 @@
 <html>
 <head>
 <meta charset="ISO-8859-1"/>
-<title>Sign Up</title>
+<title>Task Board</title>
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<h1>Sign In</h1>
-<div th:replace="fragments/signInForm :: signInForm">
-</div>
-<hr>
-<h1>Or</h1>
-<hr>
-<h1>Sign Up</h1>
-<div th:replace="fragments/signUpForm :: signUpForm">
+	<div th:replace="fragments/taskCard :: taskCard(name='Example task', date='October 30, 2018 at 12:24pm', user='William Anderson', description='This is an example of a task description')">
 </div>
 </body>
 </html>
