--- a/src/main/resources/templates/fragments/signInForm.html
+++ b/src/main/resources/templates/fragments/signInForm.html
@@ -1,8 +1,12 @@
 <div th:fragment="signInForm">
-	<form class="form-inline align-items-center" action="#" th:action="@{/signInForm}" method="GET">
-		<input class="form-control mr-sm-2" type="email" placeholder="Email" aria-label="Email" name="email">
-		<input class="form-control mr-sm-2" type="password" placeholder="Password" aria-label="Password" name="password">
-		<button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Sign In</button>
+	<form class="form-signin pr-4" style="width: 350px;" action="#" th:action="@{/signInForm}" method="GET">
+		<div class="form-group">
+			<input type="email" class="form-control rounded-0" placeholder="Email address" required autofocus name="email">
+		</div>
+		<div class="form-group">
+			<input type="password" class="form-control rounded-0 mb-2" placeholder="Password" required name="password">
+		</div>
+		<button class="btn btn-dark btn-block" type="submit">Sign in</button>
 	</form>
 </div>
 	
