--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -2,25 +2,18 @@
 <html>
 <head>
 <meta charset="ISO-8859-1"/>
-<title>Sign In</title>
+<title>Sign Up</title>
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="main">
-<h1 class="form-heading">Sign In</h1>
-<form id="login">
-	<div class="form-group">
-		<input type="email" class="form-control" id="inputEmail" placeholder = "Email Address">
+<div class="d-flex h-100 flex-column align-items-center justify-content-center bg-light">
+	<h1 class="mb-5 display-4">Orderly</h1>
+	<div class="d-flex justify-content-center align-items-center">
+	  	<div th:replace="fragments/signInForm :: signInForm"></div>
+	  	<div th:replace="fragments/signUpForm :: signUpForm"></div>
 	</div>
-	<div class="form-group">
-		<input type="password" class="form-control" id="inputPassword" placeholder = "Password">
-	</div>
-	<div class="forgot">
-	<a href="reset.html">Forgot password?</a>
-	</div>
-	<button type="submit" class="btn btn-primary">Sign In</button>
-</form>
-</div>
+  </div>
 </body>
 </html>
