--- a/src/main/resources/templates/fragments/signUpForm.html
+++ b/src/main/resources/templates/fragments/signUpForm.html
@@ -1,15 +1,18 @@
 <div th:fragment="signUpForm">
-	<form class="form-signin border-left pl-4" style="width: 350px;" action="#" th:action="@{/signUpForm}" method="GET">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Name" name="name" required>
-      </div>
-      <div class="form-group">
-        <input type="email" class="form-control" placeholder="Email address" name="email" required>
-      </div>
-      <div class="form-group">
-        <input type="password" class="form-control" placeholder="Password" name="password" required>
-      </div>
-      <button class="btn btn-dark btn-block" type="submit">Sign up</button>
-    </form>
+	<form class="form-signin border-left pl-4" style="width: 350px;"
+		action="#" th:action="@{/signUpForm}" method="GET">
+		<div class="form-group">
+			<input type="text" class="form-control" placeholder="Name"
+				name="name" required>
+		</div>
+		<div class="form-group">
+			<input type="email" class="form-control" placeholder="Email address"
+				name="email" required>
+		</div>
+		<div class="form-group">
+			<input type="password" class="form-control" placeholder="Password"
+				name="password" required>
+		</div>
+		<button class="btn btn-dark btn-block" type="submit">Sign up</button>
+	</form>
 </div>
-	
