--- a/src/main/resources/templates/fragments/taskCard.html
+++ b/src/main/resources/templates/fragments/taskCard.html
@@ -1,14 +1,17 @@
 <div th:fragment="taskCard(name, date, user, description)">
 	<!-- Task Card -->
-	<div class="card bg-light m-2" style="width: 250px;" data-toggle="modal" data-target="#exampleModalCenter">
+	<div class="card bg-light m-2" style="width: 250px;"
+		data-toggle="modal" data-target="#exampleModalCenter">
 		<div class="card-body">
 			<h5 th:text="${name}" class="card-title"></h5>
 			<small th:text="${date}" class="card-text text-muted"></small>
 		</div>
 	</div>
-	
+
 	<!-- Details Modal -->
-	<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+	<div class="modal fade" id="exampleModalCenter" tabindex="-1"
+		role="dialog" aria-labelledby="exampleModalCenterTitle"
+		aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -16,7 +19,8 @@
 						<h5 class="modal-title">Task name</h5>
 						<small th:text="${date}" class="text-muted"></small>
 					</div>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<button type="button" class="close" data-dismiss="modal"
+						aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
 				</div>
@@ -25,7 +29,8 @@
 					<p th:text="${description}"></p>
 				</div>
 				<div class="modal-footer">
-					<div th:replace="fragments/comment :: comment(name='William Anderson', date='October 30, 2018 at 11:32am', text='testing 123')"></div>
+					<div
+						th:replace="fragments/comment :: comment(name='William Anderson', date='October 30, 2018 at 11:32am', text='testing 123')"></div>
 					<textarea class="form-control" placeholder="Write a comment..."></textarea>
 					<button type="button" class="btn btn-primary">Add Comment</button>
 				</div>
@@ -33,4 +38,3 @@
 		</div>
 	</div>
 </div>
-	
