--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1"/>
+<meta charset="ISO-8859-1" />
 <title>Log Out</title>
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<link
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
+<script
+	src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
-<style type ="text/css">
-#lotop{
+<style type="text/css">
+#lotop {
 	height: 40px;
 	position: fixed;
-	top:0%;
-	width:100%;
+	top: 0%;
+	width: 100%;
 	opacity: 1;
 }
-	
-#middle{
-	position:fixed;
-	top:50%;
-	left:50%;
+
+#middle {
+	position: fixed;
+	top: 50%;
+	left: 50%;
 	transform: translate(-50%, -50%);
 }
 
-
-#lobtm{
+#lobtm {
 	height: 40px;
 	position: fixed;
-	bottom:0%;
-	width:100%;
+	bottom: 0%;
+	width: 100%;
 	opacity: 1;
 }
 </style>
@@ -36,25 +40,25 @@
 </head>
 <body>
 
-<div id ="lotop">
-<form action="/signin">
-    <input type="submit" class="btn btn-dark btn-block" value="Back to Sign In" />
-</form>
-</div>
+	<div id="lotop">
+		<form action="/signin">
+			<input type="submit" class="btn btn-dark btn-block"
+				value="Back to Sign In" />
+		</form>
+	</div>
 
 
-<div id ="middle">
-<h1>
-Thank you for using Orderly!
-</h1>
-</div>
+	<div id="middle">
+		<h1>Thank you for using Orderly!</h1>
+	</div>
 
 
-<div id ="lobtm">
-<form action="/signin">
-    <input type="submit" class="btn btn-dark btn-block" value="Back to Sign In" />
-</form>
-</div>
+	<div id="lobtm">
+		<form action="/signin">
+			<input type="submit" class="btn btn-dark btn-block"
+				value="Back to Sign In" />
+		</form>
+	</div>
 
 </body>
 </html>
