--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1"/>
+<meta charset="ISO-8859-1" />
 <title>Sign Up</title>
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<link
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
+<script
+	src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="d-flex h-100 flex-column align-items-center justify-content-center bg-light">
-	<h1 class="mb-5 display-4">Orderly</h1>
-	<div class="d-flex justify-content-center align-items-center">
-	  	<div th:replace="fragments/signInForm :: signInForm"></div>
-	  	<div th:replace="fragments/signUpForm :: signUpForm"></div>
+	<div
+		class="d-flex h-100 flex-column align-items-center justify-content-center bg-light">
+		<h1 class="mb-5 display-4">Orderly</h1>
+		<div class="d-flex justify-content-center align-items-center">
+			<div th:replace="fragments/signInForm :: signInForm"></div>
+			<div th:replace="fragments/signUpForm :: signUpForm"></div>
+		</div>
 	</div>
-  </div>
 </body>
 </html>
