--- a/src/main/resources/templates/fragments/taskCard.html
+++ b/src/main/resources/templates/fragments/taskCard.html
@@ -1,10 +1,9 @@
 <div th:fragment="taskCard(name, date, user, description)">
 	<!-- Task Card -->
-	<div class="card bg-light m-2" style="width: 250px;"
-		data-toggle="modal" data-target="#exampleModalCenter">
-		<div class="card-body">
-			<h5 th:text="${name}" class="card-title"></h5>
-			<small th:text="${date}" class="card-text text-muted"></small>
+	<div class="card orderlyTask" data-toggle="modal" data-target="#exampleModalCenter">
+		<div class="d-flex flex-column card-body">
+			<strong th:text="${name}"></strong>
+			<small th:text="${date}" class="text-muted"></small>
 		</div>
 	</div>
 
@@ -13,7 +12,7 @@
 		role="dialog" aria-labelledby="exampleModalCenterTitle"
 		aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered" role="document">
-			<div class="modal-content">
+			<div class="modal-content bg-light">
 				<div class="modal-header">
 					<div class="d-flex flex-column">
 						<h5 class="modal-title">Task name</h5>
@@ -28,10 +27,10 @@
 					<a th:text="${user}" href="#" class="badge badge-dark"></a>
 					<p th:text="${description}"></p>
 				</div>
-				<div class="modal-footer">
-					<div
-						th:replace="fragments/comment :: comment(name='William Anderson', date='October 30, 2018 at 11:32am', text='testing 123')"></div>
-					<textarea class="form-control" placeholder="Write a comment..."></textarea>
+				<div class="modal-footer d-flex flex-column align-items-end">
+					<!-- Use th:each to render the following div for each comment  -->
+					<div th:replace="fragments/comment :: comment(name='William Anderson', date='October 30, 2018 at 11:32am', text='testing 123')"></div>
+					<textarea class="form-control" style="margin: 0 0 8px 0;" placeholder="Write a comment..."></textarea>
 					<button type="button" class="btn btn-primary">Add Comment</button>
 				</div>
 			</div>
