--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -12,9 +12,8 @@
 	src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
-<body>
-	<div
-		class="d-flex h-100 flex-column align-items-center justify-content-center bg-light">
+<body class="bg-light">
+	<div class="d-flex h-100 flex-column align-items-center justify-content-center">
 		<h1 class="mb-5 display-4">Orderly</h1>
 		<div class="d-flex justify-content-center align-items-center">
 			<div th:replace="fragments/signInForm :: signInForm"></div>
