added nav,added home, removed logout

--- a/src/main/resources/templates/fragments/signInForm.html
+++ b/src/main/resources/templates/fragments/signInForm.html
@@ -1,5 +1,5 @@
-<form class="form-signin pr-4" style="width: 350px;" action="# th:fragment="signInForm""
-	th:action="@{/signInForm}" method="GET">
+<form class="form-signin pr-4" style="width: 350px;"
+	th:fragment="signInForm" th:action="@{/signInForm}" method="GET">
 	<div class="form-group">
 		<input type="email" class="form-control rounded-0"
 			placeholder="Email address" required autofocus name="email">
