--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -3,18 +3,26 @@
 <head>
 <meta charset="ISO-8859-1" />
 <title>Task Board</title>
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<link
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script
+	src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
 <body class="bg-light">
-	<div class="d-flex"> 
-		<!-- Use th:each to render the following div for each column --> 
+	<div th:replace="fragments/nav :: nav"></div>
+	<div class="d-flex">
+		<!-- Use th:each to render the following div for each column -->
 		<div class="orderlyColumn">
 			<h5>Column Name</h5>
-			<!-- Use th:each to render the following div for each task --> 
-			<div th:replace="fragments/taskCard :: taskCard(name='Example task', date='October 30, 2018 at 12:24pm', user='William Anderson', description='This is an example of a task description')">
+			<!-- Use th:each to render the following div for each task -->
+			<div
+				th:replace="fragments/taskCard :: taskCard(name='Example task', date='October 30, 2018 at 12:24pm', user='William Anderson', description='This is an example of a task description')">
 			</div>
 		</div>
 	</div>
