--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,7 +27,7 @@
 				</div>
 				<button class="btn btn-dark btn-block" type="submit">Search</button>
 			</form>
-			<form class="form-signin border-left pl-4" style="width: 350px;">
+			<form class="form-signin border-left pl-4" style="width: 350px;" action="/searchResults">
 				<h5>Create a Project</h5>
 				<div class="form-group">
 					<input class="form-control rounded-0" type="search" required
