Update to home.html -> th:field comment

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,13 +23,14 @@
 				<h5>Find a Project</h5>
 				<div class="form-group">
 					<input class="form-control rounded-0" type="search" required
-						autofocus placeholder="Project Name" aria-label="Search" th:field="*{name}">
+						autofocus placeholder="Project Name" aria-label="Search">
 				</div>
 				<button class="btn btn-dark btn-block" type="submit">Search</button>
 			</form>
 			<form action="#" class="form-signin border-left pl-4" style="width: 350px;" th:action="@{/createProject}" th:object="${project}" method="POST">
 				<h5>Create a Project</h5>
 				<div class="form-group">
+				<!-- ADD th:field="*{name}" to line 34 -->
 					<input class="form-control rounded-0" type="text" required autofocus placeholder="Project Name" aria-label="Text" name="name"  />
 				</div>
 				<button class="btn btn-dark btn-block" type="submit">Create</button>
