Added dropdown for finding project and navigating to its board

--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -16,7 +16,7 @@
 </head>
 <body class="bg-light">
 	<div th:replace="fragments/nav :: nav"></div>
-	<p th:text="${project.name}">Test</p>
+	<p th:text="${project.id}">Test</p>
 	<div class="d-flex">
 		<!-- Use th:each to render the following div for each column -->
 		<div class="orderlyColumn">
